<resources>
    <string name="app_name">MessageMe!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginactivity_username_hint">Username</string>
    <string name="oginactivity_username_hint">Password</string>
    <string name="loginactivity_button_login">Login</string>
    <string name="loginactivity_button_newuser">New User?</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="title_activity_sign_up">MessageMe! (Sign Up)</string>
    <string name="signupactivity_hint_firstname">First Name</string>
    <string name="signupactivity_hint_lastname">Last Name</string>
    <string name="signupactivity_hint_username">Username</string>
    <string name="signupactivity_hint_password">Password</string>
    <string name="signupactivity_hint_confirmpass">Confirm Password</string>
    <string name="signupactivity_button_signup">Sign Up</string>
    <string name="title_activity_read_msg">Read Message</string>
    <string name="title_activity_compose">Compose Message</string>
    <string name="show_closest_beacon">Show Beacon</string>
</resources>
