<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.azim.messageme.SignUpActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupactivity_edittext_firstname"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/signupactivity_hint_firstname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupactivity_edittext_lastname"
        android:layout_below="@+id/signupactivity_edittext_firstname"
        android:layout_alignParentEnd="true"
        android:hint="@string/signupactivity_hint_lastname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupactivity_edittext_username"
        android:layout_below="@+id/signupactivity_edittext_lastname"
        android:layout_alignParentStart="true"
        android:hint="@string/signupactivity_hint_username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signupactivity_edittext_password"
        android:layout_below="@+id/signupactivity_edittext_username"
        android:layout_centerHorizontal="true"
        android:hint="@string/signupactivity_hint_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signupactivity_edittext_confirmpass"
        android:layout_below="@+id/signupactivity_edittext_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/signupactivity_hint_confirmpass" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupactivity_button_signup"
        android:id="@+id/signupactivity_button_signup"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
